<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:adjustViewBounds="false"
                android:saveEnabled="false"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:soundEffectsEnabled="false"
                app:srcCompat="@mipmap/sodininko_logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusForward="@id/password">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusForward="@id/password"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/forgot_password_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_forgot_password" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:text="@string/action_sign_in"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="#000"
                    android:translationX="0dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="83dp"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@+id/divider3"
                    android:layout_alignLeft="@+id/divider3"
                    android:layout_alignTop="@+id/divider3"
                    android:layout_alignEnd="@+id/divider3"
                    android:layout_alignRight="@+id/divider3"
                    android:layout_alignBottom="@+id/divider3"
                    android:layout_marginStart="149dp"
                    android:layout_marginLeft="149dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginEnd="147dp"
                    android:layout_marginRight="147dp"
                    android:layout_marginBottom="-10dp"
                    android:background="#FFF"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/or_text"
                    android:translationY="0dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/email_sign_on_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:text="@string/action_sign_on"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>